force-app/main/default/objects/Display_Library__c/Display_Library__c.object-meta.xml
<CustomObject>
    <label>Display Library</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Display Libary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Display Libraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>