force-app/main/default/objects/Display_Library__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art Card/Dealer Board/Contractor Board</fullName>
            </value>
            <value>
                <fullName>Binder/Specifier Kit</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Individual Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>