force-app/main/default/objects/Display_Library__c/fields/Date_Placed__c.field-meta.xml
<CustomField>
    <fullName>Date_Placed__c</fullName>
    <label>Date Placed</label>
    <type>Date</type>
</CustomField>