force-app/main/default/objects/Display_Library__c/fields/Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped__c</fullName>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>