force-app/main/default/objects/Display_Library__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>IF( Item_Number__c &lt;&gt; null,  Item_Number__r.Description , &apos; &apos;)</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>