force-app/main/default/objects/Display_Library__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Display Libraries</relationshipLabel>
    <relationshipName>Display_Libraries</relationshipName>
    <type>Lookup</type>
</CustomField>