force-app/main/default/objects/Display_Library__c/fields/Remove__c.field-meta.xml
<CustomField>
    <fullName>Remove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>